fixed problem with horizontal scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,12 @@
-/* GENERAL */
-/* Police */
+/** GENERAL */
 @import url("https://fonts.googleapis.com/cspartout?family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap");
-/* Padding et marges par défaut */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-/* Font-size et font-family par défaut */
 html {
-  /* taille par défaut navigateur = 16px = 100% */
-  /* 10px = 62.5% = 1rem */
   font-size: 62.5%;
 }
 body {
@@ -18,14 +14,12 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
 }
-/* Images */
 img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-/* Liens */
 a {
   text-decoration: none;
 }
@@ -102,7 +96,7 @@ sup {
   width: 20%;
 }
 .border-bottom {
-  width: 25%;
+  max-width: 25%;
   height: 1rem;
   margin-left: 76%;
   background: #0f6464;
@@ -118,14 +112,14 @@ sup {
   border-right: 1rem solid #0f6464;
 }
 
-/* BOUTON ASCENSEUR */
+/** BOUTON ASCENSEUR */
 #button-top {
-  display: none; /* Caché par défaut */
-  position: fixed; /* Position fixe */
+  display: none; 
+  position: fixed; 
   bottom: 10%;
   right: 1.5%;
-  z-index: 100; /* Pas de chevauchement */
-  cursor: pointer; /* Ajoute un pointeur de souris en :hover */
+  z-index: 100; 
+  cursor: pointer;
 }
 .fa-chevron-circle-up {
   color: #0f6464;
@@ -138,7 +132,7 @@ sup {
   color: orange;
 }
 
-/* HOMEPAGE - SECTION 1 */
+/** HOMEPAGE - SECTION 1 */
 .homepage {
   position: relative;
   background: url("../images/bg1.png") no-repeat center/cover;
@@ -209,7 +203,7 @@ la fonction var () fait référence à notre variable */
   display: none;
 }
 
-/* SECTION 2 - PARTOUT */
+/** SECTION 2 - PARTOUT */
 .everywhere-box article {
   margin-right: 0.5rem;
 }
@@ -229,7 +223,7 @@ la fonction var () fait référence à notre variable */
   color: orange;
 }
 
-/* NUMBERS */
+/** NUMBERS */
 #numbers {
   margin-bottom: 5rem;
   border: 1rem solid #0f6464;
@@ -262,14 +256,15 @@ la fonction var () fait référence à notre variable */
   padding: 1rem 0;
 }
 
-/* SECTION 3 - DONNÉES INTIMES */
+/** SECTION 3 - DONNÉES INTIMES */
 .intimacy-box .img-box {
   margin-right: 0.5rem;
 }
 .intimacy-box article {
   margin-left: 0.5rem;
 }
-/* SECTION 4 - DATA */
+
+/** SECTION 4 - DATA */
 .data-box .img-box {
   margin-left: 0.5rem;
 }
@@ -277,7 +272,7 @@ la fonction var () fait référence à notre variable */
   margin-right: 0.5rem;
 }
 
-/* SECTION 5 - OBJETS VULNÉRABLES */
+/** SECTION 5 - OBJETS VULNÉRABLES */
 .vulnerable-box .img-box {
   margin-right: 0.5rem;
 }
@@ -285,7 +280,7 @@ la fonction var () fait référence à notre variable */
   margin-left: 0.5rem;
 }
 
-/* SECTION 6 - SE PROTÉGER */
+/** SECTION 6 - SE PROTÉGER */
 .protection-box .img-box {
   margin-left: 0.5rem;
 }
@@ -305,7 +300,7 @@ la fonction var () fait référence à notre variable */
   color: orange;
 }
 
-/* PRATIQUES ET SOURCES */
+/** PRATIQUES ET SOURCES */
 #pratiques,
 .sources {
   padding: 1rem;
@@ -333,7 +328,8 @@ la fonction var () fait référence à notre variable */
 .sources a:hover {
   color: #4bb74b;
 }
-/* FOOTER */
+
+/** FOOTER */
 footer {
   background: #0f6464;
   color: white;
@@ -357,14 +353,8 @@ footer p {
 .mail-portfolio {
   margin-right: 5rem;
 }
-/* #contact { */
-/* display: flex; */
-/* justify-content: flex-start; */
-/* align-items: center; */
-/* margin-bottom: 2rem; */
-/* } */
 
-/******** MEDIA QUERIES ************/
+/*! ******* MEDIA QUERIES ************/
 @media only screen and (max-width: 592px) {
   /* Image accueil en bg */
   .homepage {
@@ -372,7 +362,6 @@ footer p {
     animation: none;
   }
 }
-
 @media only screen and (max-width: 766px) {
   /* Bouton ascenseur */
   #button-top {
@@ -389,12 +378,12 @@ footer p {
   #numbers {
     margin-bottom: 2.5rem;
   }
-  .border-top,
-  .border-bottom {
+  .border-top {
     width: 50%;
   }
   .border-bottom {
     margin-left: 51%;
+    max-width: 50%;
   }
   /* Titres */
   .main-title {
@@ -432,7 +421,6 @@ footer p {
   footer {
     padding: 1rem;
   }
-
   footer i {
     margin-right: 0.5rem;
   }
@@ -444,7 +432,6 @@ footer p {
     padding: 0;
   }
 }
-
 @media only screen and (min-width: 767px) and (max-width: 1219px) {
   /* Navbar */
   .navbar {
@@ -455,7 +442,6 @@ footer p {
     font-size: 4.5rem;
   }
 }
-
 @media only screen and (max-width: 1220px) {
   /* Dispositions des blocs */
   .everywhere-box,
@@ -491,10 +477,9 @@ footer p {
     flex-direction: column;
     width: 0;
     height: 88vh;
-    /* height:calc(100vh - hauteur navbar); */
+    /* height: calc(100vh - hauteur navbar); */
     position: absolute;
     top: 12vh;
-    /* on le fixe par rapport à la hauteur de la navbar */
     right: 0;
     background: #0f6464;
     transform: translateX(110%);
@@ -586,14 +571,13 @@ footer p {
   .show-nav .sixth {
     transition: all 1.5s ease-out;
   }
-  /* Footer */
+  /** Footer */
   #contact {
     flex-direction: column;
     align-items: flex-start;
     line-height: 2;
   }
 }
-
 /* Media queries pour moyens écrans - Bonus */
 @media only screen and (min-width: 1220px) {
   /* Animation du trait sous .navbar-link */
